--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,6 +7,9 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '**.md'
+
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
